// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategorySkeleton component should render a snapshot with multiple 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 65,
            "width": 170,
          },
        ]
      }
    />
  </View>,
]
`;

exports[`CategorySkeleton component should render a snapshot without multiple 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      [
        {
          "opacity": 1,
        },
        {
          "backgroundColor": "#D3D3D3",
        },
        {
          "borderRadius": 10,
          "height": 65,
          "width": 170,
        },
      ]
    }
  />
</View>
`;

exports[`FavouriteSkeleton component should render a snapshot with multiple 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 100,
            "width": 260,
          },
        ]
      }
    />
  </View>,
]
`;

exports[`FavouriteSkeleton component should render a snapshot without multiple 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      [
        {
          "opacity": 1,
        },
        {
          "backgroundColor": "#D3D3D3",
        },
        {
          "borderRadius": 10,
          "height": 100,
          "width": 260,
        },
      ]
    }
  />
</View>
`;

exports[`MerchantSkeleton component should render a snapshot with multiple 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 10,
            "height": 115,
            "width": 115,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 10,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 60,
          },
        ]
      }
    />
    <View
      height={5}
      style={
        {
          "height": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "#D3D3D3",
          },
          {
            "borderRadius": 5,
            "height": 10,
            "width": 100,
          },
        ]
      }
    />
  </View>,
]
`;

exports[`MerchantSkeleton component should render a snapshot without multiple 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      [
        {
          "opacity": 1,
        },
        {
          "backgroundColor": "#D3D3D3",
        },
        {
          "borderRadius": 10,
          "height": 115,
          "width": 115,
        },
      ]
    }
  />
  <View
    style={
      {
        "height": 10,
      }
    }
  />
  <View
    style={
      [
        {
          "opacity": 1,
        },
        {
          "backgroundColor": "#D3D3D3",
        },
        {
          "borderRadius": 5,
          "height": 10,
          "width": 60,
        },
      ]
    }
  />
  <View
    height={5}
    style={
      {
        "height": 5,
      }
    }
  />
  <View
    style={
      [
        {
          "opacity": 1,
        },
        {
          "backgroundColor": "#D3D3D3",
        },
        {
          "borderRadius": 5,
          "height": 10,
          "width": 100,
        },
      ]
    }
  />
</View>
`;

exports[`Skeleton component should render a snapshot - default 1`] = `
<View
  style={
    [
      {
        "opacity": 1,
      },
      {
        "backgroundColor": "#D3D3D3",
      },
      {
        "height": 100,
        "width": 100,
      },
    ]
  }
/>
`;
